--- a/package.json
+++ b/package.json
@@ -8,19 +8,36 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "react-dev": "webpack -d --watch"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "express": "^4.16.3",
-    "jpeg-js": "^0.3.4",
-    "js-image-generator": "^1.0.2",
     "mysql": "^2.15.0",
+    "react": "^16.4.0",
+    "react-cli": "^0.3.1",
+    "react-dom": "^16.4.0",
     "request": "^2.87.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.249.1",
-    "aws-sign": "^0.1.2",
-    "aws4": "^1.7.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1"
   }
 }
