--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,11 @@
     "max-len": [1, 150, 2, {"ignoreComments": true}],
     "react/prop-types": 0,
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": [2]
+    "react/jsx-uses-vars": [2],
+    "no-console": "off"
+  },
+  "globals": {
+    "document": false
   },
   "extends": ["airbnb-base"]
 }
