--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "babel-eslint": "^8.2.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^4.1.1",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
     "react": "^16.4.0",
     "react-cli": "^0.3.1",
     "react-dom": "^16.4.0",
+    "reactstrap": "^6.1.0",
     "request": "^2.87.0",
     "styled-components": "^3.3.2"
   },
