--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.4.0",
     "reactstrap": "^6.1.0",
     "request": "^2.87.0",
+    "style-loader": "^0.21.0",
     "styled-components": "^3.3.2"
   },
   "devDependencies": {
