--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^4.1.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mysql": "^2.15.0",
     "react": "^16.4.0",
