--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "start-dev": "nodemon server/index.js",
     "react-dev": "webpack -d --watch"
   },
   "dependencies": {
